--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "Todo-App",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,8 +7,8 @@
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["nodejs", "mongodb", "mongoose", "expressjs", "jsonwebtoken", "bcrypt", "cors", "rest-api", "nodemon"],
+  "author": "Paul Ajijola",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
